<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dogImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/doggoimage_text" />

        <TextView
            android:id="@+id/name"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/dogImage"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:text="@string/name_placeholder" />


        <TextView
            android:id="@+id/gender"
            style="@style/DetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dogImage"
            android:text="@string/gender_placeholder" />

        <TextView
            android:id="@+id/age"
            style="@style/DetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dogImage"
            android:layout_toEndOf="@id/gender"

            android:text="@string/age_placeholder" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dogImage"
            android:layout_toEndOf="@id/age"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/check"
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textSize="@dimen/_20ssp"
                android:textColor="@color/green"
                android:text="@string/fa_icon_check"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>