<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailedDogActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dogImageDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/nameDetail"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/dogImageDetail"
            android:text="@string/name_placeholder"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <TextView
            android:id="@+id/genderDetail"
            style="@style/DetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dogImageDetail"
            android:text="@string/gender_placeholder"/>

        <TextView
            android:id="@+id/ageDetail"
            style="@style/DetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dogImageDetail"
            android:layout_toEndOf="@id/genderDetail"
            android:text="@string/age_placeholder" />

        <TextView
            android:id="@+id/descriptionDetail"
            style="@style/Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/genderDetail"
            android:text="@string/description_placeholder"/>

        <Button
            android:id="@+id/adopt_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/button_rounded"
            android:layout_below="@id/descriptionDetail"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_5sdp"
            android:onClick="adoptDog"
            />

    </RelativeLayout>

</ScrollView>